--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>自己紹介カード生成</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+        <meta name="description" content="自己紹介カードを生成してくれるやつです.">
 
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
