--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>自己紹介カード生成</title>
+        <title>競プロer自己紹介カード生成</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
         <meta name="description" content="自己紹介カードを生成してくれるやつです.">
